2010-09-28  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] tst_QWebPage::testStopScheduledPageRefresh() fails on MeeGo handset
        https://bugs.webkit.org/show_bug.cgi?id=46706

        The test require the network to succeed or fail in order to work.
        On MeeGo, the network can simply timeout the because of the netword access
        management. This patch makes the test use local URLs to avoid the
        problem.

        * tests/qwebpage/tst_qwebpage.cpp:
        (TestNetworkManager::TestNetworkManager):

2010-09-27  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Antonio Gomes.

        [Qt] Remove setDeviceSize methods
        https://bugs.webkit.org/show_bug.cgi?id=46347

        Remove our setDeviceHeight() API and obtain it automatically from the
        system. Also for testing purposes, make it possible to override the
        values via two newly introduced environment variables.

        * Api/qgraphicswebview.cpp:
        * Api/qgraphicswebview.h:
        * Api/qwebpage.cpp:
        (getintenv):
        (queryDeviceSizeForScreenContainingWidget):
        (QWebPage::viewportConfigurationForSize):
        * WebCoreSupport/PageClientQt.cpp:
        (WebCore::PageClientQGraphicsWidget::windowRect):
        * symbian/eabi/QtWebKitu.def:

2010-09-27  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Antonio Gomes.

        Enable local rendering of NPAPI plugins on Maemo6.

        https://bugs.webkit.org/show_bug.cgi?id=46618

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createPlugin):

2010-09-27  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] tst_QWebFrame::popupFocus() randomly fail on MeeGo handset because the focus is not set on the window
        https://bugs.webkit.org/show_bug.cgi?id=46617
